crates/sui-core/src/authority/snapshots/sui_core__authority__execution_time_estimator__tests__execution_time_observer_v90.snap
---
source: crates/sui-core/src/authority/execution_time_estimator.rs
expression: snapshot_data
---
protocol_version: 90
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 10
          - secs: 0
            nanos: 14000000
        - - 10
          - secs: 0
            nanos: 7000000
        - - 5
          - secs: 0
            nanos: 19000000
        - - 1
          - secs: 0
            nanos: 25000000
      stake_weighted_median:
        secs: 0
        nanos: 19000000
  - - MergeCoins
    - observations:
        - - 6
          - secs: 0
            nanos: 63000000
        - - 1
          - secs: 0
            nanos: 21000000
        - - 3
          - secs: 0
            nanos: 0
        - - 7
          - secs: 0
            nanos: 0
      stake_weighted_median:
        secs: 0
        nanos: 21000000
  - - SplitCoins
    - observations:
        - - 8
          - secs: 0
            nanos: 0
        - - 9
          - secs: 0
            nanos: 52000000
        - - 5
          - secs: 0
            nanos: 54000000
        - - 9
          - secs: 0
            nanos: 40000000
      stake_weighted_median:
        secs: 0
        nanos: 52000000
  - - TransferObjects
    - observations:
        - - 10
          - secs: 0
            nanos: 56000000
        - - 8
          - secs: 0
            nanos: 81000000
        - - 0
          - ~
        - - 8
          - secs: 0
            nanos: 47000000
      stake_weighted_median:
        secs: 0
        nanos: 56000000
  - - Upgrade
    - observations:
        - - 0
          - ~
        - - 10
          - secs: 0
            nanos: 252000000
        - - 6
          - secs: 0
            nanos: 981000000
        - - 4
          - secs: 0
            nanos: 587000000
      stake_weighted_median:
        secs: 0
        nanos: 587000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 7
          - secs: 0
            nanos: 404000000
        - - 6
          - secs: 0
            nanos: 162000000
        - - 9
          - secs: 0
            nanos: 268000000
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 268000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 9
          - secs: 0
            nanos: 84000000
        - - 0
          - ~
        - - 6
          - secs: 0
            nanos: 147000000
        - - 9
          - secs: 0
            nanos: 351000000
      stake_weighted_median:
        secs: 0
        nanos: 147000000
transaction_estimates:
  - - coin_transfer_call
    - secs: 0
      nanos: 268000000
  - - mixed_move_calls
    - secs: 0
      nanos: 415000000
  - - native_commands_with_observations
    - secs: 0
      nanos: 296000000
  - - transfer_objects_2_items
    - secs: 0
      nanos: 168000000
  - - split_coins_2_amounts
    - secs: 0
      nanos: 156000000
  - - merge_coins_2_sources
    - secs: 0
      nanos: 63000000
  - - make_move_vec_6_elements
    - secs: 0
      nanos: 133000000
  - - mixed_commands
    - secs: 0
      nanos: 273000000
  - - upgrade_package
    - secs: 0
      nanos: 587000000
